# StarryOS

./: .gitignore  .gitmodules  Cargo.toml  Developer.md  Dice.md  Makefile  README.md  arceos.mk  axboot.toml  depend.md  dice-dep.sh  fix-versions.sh  starry.mk
.github/workflows/: build-and-test-docker.yml  build-and-test.yml  check.yml  code-stats.yml  starry-test-harness.yml  test-template.yml
api/: Cargo.toml
api/axfeat/: Cargo.toml
api/src/: lib.rs  mm.rs  signal.rs  task.rs
api/starry-api/: Cargo.toml
api/starry-core/: Cargo.toml
arceos/: Cargo.toml
arceos/api/axfeat/: Cargo.toml
arceos/modules/axalloc/src/: lib.rs
arceos/modules/axdriver/: Cargo.toml
arceos/modules/axdriver/src/: virtio.rs
arceos/modules/axdriver/src/structs/: mod.rs
arceos/modules/axfs/src/: lib.rs
arceos/modules/axhal/: Cargo.toml
arceos/modules/axhal/src/: irq.rs  lib.rs
arceos/modules/axmm/: Cargo.toml
arceos/modules/axmm/src/: aspace.rs  lib.rs
arceos/modules/axnet/: Cargo.toml
arceos/modules/axnet/src/: socket.rs  tcp.rs  udp.rs  unix.rs  vsock.rs
arceos/modules/axnet/src/device/: vsock.rs
arceos/modules/axnet/src/unix/: dgram.rs  stream.rs
arceos/modules/axnet/src/vsock/: stream.rs
arceos/modules/axruntime/: Cargo.toml
arceos/modules/axruntime/src/: lib.rs
arceos/modules/axsync/src/: mutex.rs
arceos/modules/axtask/src/: api.rs  global_task_queue.rs  task.rs
arceos/modules/axtask/src/future/: mod.rs
arceos/modules/axwatchdog/src/: init.rs  lib.rs  watchdog_task.rs
arch/axplat/: Cargo.toml
arch/axplat-aarch64-crosvm-virt/: Cargo.toml  axconfig.toml
arch/axplat-aarch64-peripherals/: Cargo.toml
arch/axplat-aarch64-qemu-virt/: Cargo.toml
arch/axplat-x86-csv/: Cargo.toml  axconfig.toml
arch/axplat-x86-csv/src/: apic.rs  boot.rs  console.rs  init.rs  lib.rs  mem.rs  multiboot.S  power.rs  psci.rs  time.rs
arch/axplat-x86-pc/: Cargo.toml
core/: Cargo.toml
core/axsync/: Cargo.toml
core/axtask/: Cargo.toml
core/src/: hooks.rs  lib.rs  lrucache.rs  mm.rs  task.rs
docs/: Developer.md  Dice.md  code-stats.md  tee.md
drivers/arm-gic/: .gitignore
drivers/axdriver/: Cargo.toml
entry/: Cargo.toml
entry/src/: main.rs
fs/axfs/: Cargo.toml
io/axwatchdog/: Cargo.toml
io/axwatchdog/src/: rendezvous.rs
local_crates/arm-gic/: Cargo.toml  README.md
local_crates/axalloc/: Cargo.toml
local_crates/axcpu/: Cargo.toml
local_crates/axdriver/: Cargo.toml
local_crates/axfs-ng-vfs/: Cargo.toml
local_crates/axhal/: Cargo.toml
local_crates/axio/: Cargo.toml
local_crates/axklib/: Cargo.toml
local_crates/axplat/: Cargo.toml
local_crates/axplat-aarch64-crosvm-virt/: Cargo.toml
local_crates/axplat-aarch64-peripherals/: Cargo.toml
local_crates/axplat-aarch64-qemu-virt/: Cargo.toml
local_crates/axplat-loongarch64-qemu-virt/: Cargo.toml
local_crates/axplat-riscv64-qemu-virt/: Cargo.toml  axconfig.toml
local_crates/axplat_crates/: Cargo.toml
local_crates/axruntime/: Cargo.toml
local_crates/axwatchdog/: README.md
local_crates/memory_addr/: Cargo.toml
local_crates/page_table_multiarch/: Cargo.toml
local_crates/starry-process/: Cargo.toml
local_crates/starry-signal/: Cargo.toml
local_crates/strace/: Cargo.toml
mm/allocator/: Cargo.toml
mm/axmm/: Cargo.toml
mm/memory_set/: Cargo.toml
mm/page_table_entry/: Cargo.toml
process/starry-signal/: Cargo.toml
process/starry-vm/: Cargo.toml
reports/: README.md  latest-info.json  latest.md
reports/20251125-062230/: loc.json
reports/20251125-065540/: loc.json  loc.md
reports/20251126-030831/: loc.json  loc.md
reports/20251127-030504/: loc.json
reports/20251128-030441/: loc.json
reports/20251129-030408/: loc.json
reports/20251130-031914/: loc.json
reports/20251201-033019/: loc.json
reports/20251202-031118/: loc.json
reports/20251203-030958/: loc.json
reports/20251204-031221/: loc.json
reports/20251205-031144/: loc.json
reports/20251206-030256/: loc.json
reports/20251207-031945/: loc.json
reports/20251208-031432/: loc.json
reports/20251209-031138/: loc.json  loc.md
reports/20251210-031529/: loc.json  loc.md
reports/20251211-031714/: loc.json  loc.md
reports/20251212-031557/: loc.json  loc.md
reports/20251213-030858/: loc.json
reports/20251214-032102/: loc.json
reports/20251215-032209/: loc.json
reports/20251216-031702/: loc.json  loc.md
reports/20251217-031328/: loc.json  loc.md
reports/20251218-031352/: loc.json  loc.md
reports/20251219-031635/: loc.json
reports/20251220-030833/: loc.json
reports/20251221-032143/: loc.json
reports/20251222-032410/: loc.json
reports/20251223-031859/: loc.json  loc.md
reports/20251224-031643/: loc.json
reports/20251225-031931/: loc.json  loc.md
reports/20251226-031730/: loc.json  loc.md
reports/20251227-031557/: loc.json
reports/20251228-032931/: loc.json  loc.md
reports/20251229-032940/: loc.json
reports/20251230-032020/: loc.json  loc.md
reports/20251231-031931/: loc.json  loc.md
reports/20260101-033039/: loc.json  loc.md
reports/20260102-032253/: loc.json  loc.md
reports/20260103-031544/: loc.json  loc.md
reports/20260104-033135/: loc.json  loc.md
reports/20260105-034610/: loc.json  loc.md
reports/20260106-032147/: loc.json  loc.md
reports/20260107-032131/: loc.json  loc.md
reports/20260108-032155/: loc.json  loc.md
reports/20260109-032246/: loc.json  loc.md
reports/20260110-031719/: loc.json
reports/20260111-033130/: loc.json  loc.md
reports/20260112-032937/: loc.json  loc.md
reports/20260113-032054/: loc.json  loc.md
reports/20260114-032847/: loc.json  loc.md
reports/20260115-032328/: loc.json  loc.md
reports/20260116-032230/: loc.json  loc.md
reports/20260117-031557/: loc.json
reports/20260118-032811/: loc.json  loc.md
reports/20260119-033015/: loc.json  loc.md
reports/20260120-032612/: loc.json  loc.md
reports/20260121-032530/: loc.json  loc.md
reports/20260122-032918/: loc.json  loc.md
scripts/: build-strace-disk.sh  ci-test-yocto.py  ci-test.py  dice-dep.sh  disk.sh  start.sh
src/: main.rs
(+177 files in other folders)
