[workspace]
resolver = "2"
members = ["entry"]
exclude = ["kylin-x-kernel"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = ["KylinSoft Co., Ltd. <https://www.kylinos.cn/>"]
homepage = "https://github.com/kylin-x-kernel/kylin-x-kernel"
repository = "https://github.com/kylin-x-kernel/kylin-x-kernel"
keywords = ["kylin-x-kernel", "kernel"]
categories = ["os", "no-std"]
documentation = "https://kylin-x-kernel.github.io/kylin-x-kernel"

[workspace.dependencies]
# Arceos Modules
axfeat = { path = "local_crates/axfeat", features = [
    "alloc-slab",
    "fp-simd",
    "fs-ext4",
    "irq",
    "multitask",
    "net",
    "page-alloc-4g",
    "rtc",
    "sched-rr",
    "task-ext",
    "uspace",
] }

axalloc = { path = "local_crates/axalloc" }
axconfig = { path = "local_crates/axconfig" }
axdisplay = { path = "local_crates/axdisplay" }
axdriver = { path = "local_crates/axdriver" }
axdma = { path = "local_crates/axdma" }
axfs = { path = "local_crates/axfs" }
axhal = { path = "local_crates/axhal" }
axinput = { path = "local_crates/axinput" }
axipi = { path = "local_crates/axipi" }
axlog = { path = "local_crates/axlog" }
axmm = { path = "local_crates/axmm" }
axnet = { path = "local_crates/axnet" }
axruntime = { path = "local_crates/axruntime" }
axsync = { path = "local_crates/axsync" }
axtask = { path = "local_crates/axtask" }
axwatchdog = { path = "local_crates/axwatchdog" }
axcpu = { path = "local_crates/axcpu" }

# Arceos Crates
allocator = { path = "local_crates/allocator", features = ["axerrno"] }
axklib = { path = "local_crates/axklib" } # FIXME: pin to a specific commit or tag
page_table_multiarch = { path = "local_crates/page_table_multiarch", features = [
    "axerrno",
] }
page_table_entry = { path = "local_crates/page_table_entry" }
axbacktrace = { path = "local_crates/axbacktrace" }
axerrno = { path = "local_crates/axerrno" }
axfs-ng-vfs = { path = "local_crates/axfs-ng-vfs" }
axio = { path = "local_crates/axio" }
axpoll = { path = "local_crates/axpoll" }
memory_addr = { path = "local_crates/memory_addr" }
memory_set = { path = "local_crates/memory_set" }

# Starry Modules
starry-signal = { version = "0.2", path = "local_crates/starry-signal" }
starry-core = { path = "local_crates/starry-core" }
starry-api = { path = "local_crates/starry-api" }
starry-process = { path = "local_crates/starry-process" }
starry-vm = { path = "local_crates/starry-vm" }

# Platform Abstraction Layer
axplat = { path = "local_crates/axplat" }
axplat-macros = { path = "local_crates/axplat-macros" }
axplat-aarch64-qemu-virt = { path = "local_crates/axplat-aarch64-qemu-virt" }
axplat-x86-pc = { path = "local_crates/axplat-x86-pc" }
axplat-riscv64-qemu-virt = { path = "local_crates/axplat-riscv64-qemu-virt" }
axplat-loongarch64-qemu-virt = { path = "local_crates/axplat-loongarch64-qemu-virt" }
axplat-aarch64-peripherals = { path = "local_crates/axplat-aarch64-peripherals", default-features = false }
axplat-aarch64-crosvm-virt = { path = "local_crates/axplat-aarch64-crosvm-virt" }

# Third-Party Crates
arm-gic = { path = "local_crates/arm-gic" }
fdtree_rs = { path = "local_crates/fdtree-rs" }
bitflags = "2.10"
bytemuck = { version = "1.23", features = ["unsound_ptr_pod_impl"] }
cfg-if = "1.0"
event-listener = { version = "5.4.0", default-features = false }
extern-trait = "0.2"
hashbrown = "0.16"
kspin = "0.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linkme = "0.3.33"
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
scope-local = "0.1"
slab = { version = "0.4.9", default-features = false }
spin = "0.10"
log = "0.4"
percpu = "0.2"
lazyinit = "0.2"
crate_interface = "0.1.4"
chrono = { version = "0.4", default-features = false }
kernel_guard = "0.1"
enum_dispatch = "0.3"
ctor_bare = "0.2"
lock_api = { version = "0.4", default-features = false }

[patch.crates-io]
kernel_guard = { git = "https://github.com/kylin-x-kernel/kernel_guard", branch = "main" }
