[workspace]
resolver = "2"
members = ["entry"]
exclude = ["kylin-x-kernel"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = ["KylinSoft Co., Ltd. <https://www.kylinos.cn/>"]
homepage = "https://github.com/kylin-x-kernel/kylin-x-kernel"
repository = "https://github.com/kylin-x-kernel/kylin-x-kernel"
keywords = ["kylin-x-kernel", "kernel"]
categories = ["os", "no-std"]
documentation = "https://kylin-x-kernel.github.io/kylin-x-kernel"

[workspace.dependencies]
# Arceos Modules
axfeat = { path = "api/axfeat", features = [
    "alloc-slab",
    "fp-simd",
    "fs-ext4",
    "irq",
    "multitask",
    "net",
    "page-alloc-4g",
    "rtc",
    "sched-rr",
    "task-ext",
    "uspace",
] }

axalloc = { path = "mm/axalloc" }
axconfig = { path = "util/axconfig" }
axdisplay = { path = "io/axdisplay" }
axdriver = { path = "drivers/axdriver" }
axdma = { path = "io/axdma" }
axfs = { path = "fs/axfs" }
axhal = { path = "arch/axhal" }
axinput = { path = "io/axinput" }
axipi = { path = "arch/axipi" }
axlog = { path = "util/axlog" }
axmm = { path = "mm/axmm" }
axnet = { path = "net/axnet" }
axruntime = { path = "core/axruntime" }
axsync = { path = "core/axsync" }
axtask = { path = "core/axtask" }
axwatchdog = { path = "io/axwatchdog" }
axcpu = { path = "arch/axcpu" }

# Arceos Crates
allocator = { path = "mm/allocator", features = ["axerrno"] }
axklib = { path = "util/axklib" } # FIXME: pin to a specific commit or tag
page_table_multiarch = { path = "mm/page_table_multiarch", features = [
    "axerrno",
] }
page_table_entry = { path = "mm/page_table_entry" }
axbacktrace = { path = "util/axbacktrace" }
axerrno = { path = "util/axerrno" }
axfs-ng-vfs = { path = "fs/axfs-ng-vfs" }
axio = { path = "io/axio" }
axpoll = { path = "core/axpoll" }
memory_addr = { path = "mm/memory_addr" }
memory_set = { path = "mm/memory_set" }

# Starry Modules
starry-signal = { version = "0.2", path = "process/starry-signal" }
starry-core = { path = "api/starry-core" }
starry-api = { path = "api/starry-api" }
starry-process = { path = "process/starry-process" }
starry-vm = { path = "process/starry-vm" }

# Platform Abstraction Layer
axplat = { path = "arch/axplat" }
axplat-macros = { path = "arch/axplat-macros" }
axplat-aarch64-qemu-virt = { path = "arch/axplat-aarch64-qemu-virt" }
axplat-x86-pc = { path = "arch/axplat-x86-pc" }
axplat-riscv64-qemu-virt = { path = "arch/axplat-riscv64-qemu-virt" }
axplat-loongarch64-qemu-virt = { path = "arch/axplat-loongarch64-qemu-virt" }
axplat-aarch64-peripherals = { path = "arch/axplat-aarch64-peripherals", default-features = false }
axplat-aarch64-crosvm-virt = { path = "arch/axplat-aarch64-crosvm-virt" }

# Third-Party Crates
arm-gic = { path = "drivers/arm-gic" }
fdtree_rs = { path = "fs/fdtree-rs" }
kspin = { path = "util/kspin" }
kernel_guard = { path = "util/kernel_guard" }
bitflags = "2.10"
bytemuck = { version = "1.23", features = ["unsound_ptr_pod_impl"] }
cfg-if = "1.0"
event-listener = { version = "5.4.0", default-features = false }
extern-trait = "0.2"
hashbrown = "0.16"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linkme = "0.3.33"
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
scope-local = "0.1"
slab = { version = "0.4.9", default-features = false }
spin = "0.10"
log = "0.4"
percpu = "0.2"
lazyinit = "0.2"
crate_interface = "0.1.4"
chrono = { version = "0.4", default-features = false }
enum_dispatch = "0.3"
ctor_bare = "0.2"
lock_api = { version = "0.4", default-features = false }

[patch.crates-io]
kernel_guard = { git = "https://github.com/kylin-x-kernel/kernel_guard", branch = "main" }
