[package]
name = "axplat-x86-csv"
version = "0.3.0"
description = "Implementation of `axplat` hardware abstraction layer for x86 Standard PC machine."
documentation = "https://docs.rs/axplat-x86-csv"
keywords = ["arceos", "os", "hal", "x86"]
categories = ["no-std", "hardware-support", "os"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
fp-simd = ["axcpu/fp-simd"]
irq = ["axplat/irq"]
rtc = ["x86_rtc"]
smp = ["axplat/smp", "kspin/smp"]
reboot-on-system-off = []

[dependencies]
kspin = "0.1"
log = "0.4"
bitflags = "2.6"
lazyinit = "0.2"
int_ratio = "0.1"
percpu = "0.2"
heapless = "0.9"
axconfig-macros = "0.2"
axcpu = { version = "0.3.0", git = "https://github.com/arceos-org/axcpu.git", tag = "dev-v03" }
axplat = { version = "0.3.0" }

x86 = "0.52"
x86_64 = "0.15.2"
x2apic = "0.5"
multiboot = "0.8"
raw-cpuid = "11.5"
uart_16550 = "0.4"
x86_rtc = { version = "0.1", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-none"]
