[package]
name = "axklib"
version = "0.2.0"
edition = "2024"
authors = ["周睿 <zrufo747@outlook.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[dependencies]
axerrno = {workspace = true}
memory_addr = { workspace = true }
trait-ffi = "0.2"
