[package]
name = "memory_set"
description = "Data structures and operations for managing memory mappings"
documentation = "https://docs.rs/memory_set"
keywords = ["arceos", "virtual-memory", "memory-area", "mmap"]

version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
rust-version = "1.70.0"

[dependencies]
axerrno = { workspace = true, optional = true }
memory_addr = { workspace = true }

[features]
axerrno = ["dep:axerrno"]
