[package]
name = "page_table_entry"
description = "Page table entry definition for various hardware architectures"
documentation = "https://docs.rs/page_table_entry"
version = "0.5.7"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/page_table_multiarch"
keywords = ["arceos", "paging", "page-table", "virtual-memory"]
categories = ["os", "hardware-support", "memory-management", "no-std"]
rust-version = "1.85"


[features]
arm-el2 = []

[dependencies]
bitflags = "2.9"
memory_addr.workspace = true

[target.'cfg(any(target_arch = "aarch64", doc, docsrs))'.dependencies]
aarch64-cpu = "10.0"

[target.'cfg(any(target_arch = "x86_64", doc, docsrs))'.dependencies]
x86_64 = { version = "0.15", default-features = false }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true
